--- a/style.css
+++ b/style.css
@@ -8,15 +8,26 @@
 
 :root {
   font-size: 62.5%;
+
+  --color-base-white: #ffffff;
+  --color-base-gray-100: #f5f5f5;
+  --color-base-gray-300: #8d8d99;
+  --color-base-gray-900: #202024;
+
+  font-family: "Mulish", sans-serif;
+}
+
+html,
+body {
+  font-size: 1.6rem;
+  background-color: var (--color-base-white);
+  color: var (--color-base-gray-900);
 }
 
 body {
   font-size: 1.6rem;
-  background-color: white;
-}
-
-#app > * {
-  border: 1px solid red;
+  background-color: var(--color-base-white);
+  color: var(--color-base-gray-900);
 }
 
 #app {
@@ -33,4 +44,5 @@ body {
 
 main {
   overflow-y: scroll;
+  background-color: var(--color-base-gray-100);
 }
