--- a/style.css
+++ b/style.css
@@ -127,6 +127,10 @@ main h1 {
   object-fit: cover;
 }
 
+.item img:hover {
+  filter: hue-rotate(7deg) contrast(101%) sature(200%);
+}
+
 .details {
   padding: 2.2rem;
 }
