--- a/style.css
+++ b/style.css
@@ -127,6 +127,8 @@ main h1 {
   object-fit: cover;
 
   transition: all 200ms ease-out;
+
+  display: inline-block;
 }
 
 .item img:hover {
@@ -163,4 +165,35 @@ footer p {
   text-align: center;
   padding: 1.6rem;
   font-weight: 600;
+}
+
+header {
+  --startY: -100%;
+  animation: move 0.2s;
+}
+
+footer {
+  --startY: 100%;
+  animation: move 0.2s;
+}
+
+@keyframes move {
+  from {
+    transform: translateY(var(--startY));
+  }
+}
+
+.item {
+  --delay: .4s
+  animation: appear 0.4s var9(--delay) backwards;
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: scale(0.7);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
 }
